--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,7 @@ DEPLOYMENT_MODE=home
 APP_CONFIG=/app/config/app.yaml
 PORT=8080
 DATA_PATH=/app/data
+TZ=Europe/Moscow
 
 # Secrets (replace before production)
 CSRF_KEY=REPLACE_WITH_BASE64_32_BYTES
